Updated various image paths and fixed some broken images... only some...

--- a/_posts/2014-09-21-thor.md
+++ b/_posts/2014-09-21-thor.md
@@ -58,7 +58,7 @@ And he&#8217;s no longer in pain&#8230; he&#8217;s no doubt running around in pa
 Right from the beginning, until the end.
 
 <div id="attachment_663" style="width: 178px" class="wp-caption aligncenter">
-  <a href="http://stuckiegamez.co.uk/wp-content/uploads/2014/09/87dybFZ.jpg"><img class="size-medium wp-image-663" src="http://stuckiegamez.co.uk/wp-content/uploads/2014/09/87dybFZ-168x300.jpg" alt="That cheeky face shone through everything." width="168" height="300" /></a>
+  <a href="/thor/87dybFZ.jpg"><img class="size-medium wp-image-663" src="/thor/87dybFZ.jpg" alt="That cheeky face shone through everything." width="168" height="300" /></a>
   
   <p class="wp-caption-text">
     That cheeky face shone through everything.
